# SyrvisCore

./: .clinerules  .env.template  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: dashboard-image.yml  test.yml
build-tools/: README.md  bootstrap.sh  build-dashboard.sh  build-manager.sh  build-python-package.sh  build-service.sh  build-spk.sh  build-tarball.sh  release-service.sh  select-docker-versions.py  syrviscore-bootstrap.sh  validate-spk.sh
docs/: PHASE3-NONSECURITY-NOTES.md  architecture-proposal-v2.md  backup-restore-design.md  chat-import-notes-2026-07.md  cli-syrvis.md  cli-syrvisctl.md  code-audit-2026-07.md  dashboard.md  design-doc-update-1.md  design-doc.md  dev-guide.md  dsm-wizard-guide.md  home-tech-provisioning-requirement.md  mcp-design.md  mcp-security-review-2026-07.md  nas-cleanup.md  service-declaration-v2.md  service-loading-design.md  spk-installation-guide.md  spk-troubleshooting.md  v2-design.md
docs/archives/: design-doc-update-1.md  file-structure.md  spk-scripts-analysis.md  wizard-fixes-summary.md
docs/wiki/: 01-architecture-overview.md  02-primordial-substrate.md  03-networking.md  04-split-dns.md  05-layer2-services.md  06-disaster-recovery.md  07-service-schema-reference.md  README.md
examples/syrvis-gollum/: README.md  syrvis-service.yaml
examples/syrvis-homeassistant/: README.md  syrvis-service.yaml
examples/syrvis-uptime-kuma/: syrvis-service.yaml
spk/: INFO
spk/WIZARD_UIFILES/: install_uifile.json
spk/conf/: privilege
spk/package/: README.md
spk/scripts/: postinst  postuninst  postupgrade  preinst  preuninst  preupgrade  start-stop-status
src/syrviscore/: __version__.py  cli.py  compose.py  docker_manager.py  doctor.py  paths.py  privileged_ops.py  setup.py  traefik_config.py  update.py
tests/: dsm_sim.py  test_catalog.py  test_compose.py  test_compose_cmd.py  test_config_reader.py  test_config_tree_perms.py  test_converge.py  test_deploy_bundle.py  test_docker_manager.py  test_drift.py  test_errors_format.py  test_exposure.py  test_hostnames.py  test_macvlan_shim.py  test_manager_cli.py  test_manager_core.py  test_manifest_permissions.py  test_paths.py  test_remediation.py  test_scheduled_jobs.py  test_service_cli_json.py  test_service_image.py  test_service_security.py  test_services_d.py  test_setup_env.py  test_sim_workflow.sh  test_spk_installation.sh  test_stack.py  test_stack_apply_from.py  test_stack_cli.py  test_traefik_config.py  test_version_management.sh
tests/dsm-sim/: activate.sh  deactivate.sh  reset-sim.sh  setup-sim.sh
tests/dsm-sim/root/tmp/spk-extract/: package.tgz
tests/dsm-sim/root/tmp/spk-extract/scripts/: postupgrade  preuninst  start-stop-status
tests/dsm-sim/root/volume1/docker/syrviscore/: .syrviscore-manifest.json  current
tests/dsm-sim/root/volume1/docker/syrviscore/versions/0.0.1/cli/: syrviscore-0.0.1-py3-none-any.whl
tests/dsm-sim/root/volume1/docker/syrviscore/versions/0.0.2/cli/: syrviscore-0.0.2-py3-none-any.whl
(+1 files in other folders)
